--- a/AboutUs.html
+++ b/AboutUs.html
@@ -8,7 +8,7 @@
   </head>
   <style>
     .d1{
-        background-image: url(image/sofa.jpg) ;
+        background-image: url(sofa.jpg) ;
         background-size: cover;
         height: 300px;
         width: 400px;
@@ -16,7 +16,7 @@
         margin-bottom: 10px;
     }
     .d2{
-        background-image: url(image/table.webp) ;
+        background-image: url(table.webp) ;
         background-size: cover;
         height: 300px;
         width: 400px;
@@ -25,7 +25,7 @@
 
     }
     .d3{
-        background-image: url(image/desk.jpg) ;
+        background-image: url(desk.jpg) ;
         background-size: cover;
         height: 300px;
         width: 400px;
@@ -85,13 +85,13 @@
    <div class="container m-4">
    <div class="row">
     <div class=" col fs-4 bg-secondary  text-light p-5" >@home’ is spread across the country with 33 large format retail stores with an average size of 16,000 sq.ft ‘@home’, is a perfect one-stop solution store for home planning with finest quality furniture, soft furnishings & home accessories that helps make life beautiful. The designs at ‘@home’ are contemporary yet practical, reflecting Indian tastes & requirements</div>
-    <div class="col"><img src="image/bad.jpg" alt="" width="100%" height="450px"></div>
+    <div class="col"><img src="bad.jpg" alt="" width="100%" height="450px"></div>
    </div>
    </div>
 
    <div class="container m-5">
    <div class="row">
-    <div class="col"><img src="image/set.jpg" alt="" width="100%" height="450px"></div>
+    <div class="col"><img src="set.jpg" alt="" width="100%" height="450px"></div>
 
     <div class=" col fs-4 bg-secondary  text-light p-3" >@home’ offers you an unparalleled plethora of services. Each store has a skilled in-house team of designers to assist customers with interior planning solutions by means of proprietary 3-D imaging software at no additional cost. Professional guidance in buying the right products, loan options, convenient home delivery and installation are other value added services that @home offers</div>
    </div>
