--- a/Blog.html
+++ b/Blog.html
@@ -64,8 +64,8 @@
       <hr>
       <div class="container d-flex">
         <div class="row">
-          <div class="col"><img src="image/whitechair.avif" alt="">
-          <img src="image/blackchair.avif" alt="">
+          <div class="col"><img src="whitechair.avif" alt="">
+          <img src="blackchair.avif" alt="">
           <img src="chair.avif" alt="">
         <p>Provident vitae corrupti culpa ullam quis facere veritatis adipisci aliquid vero esse in illo aliquam repellat aperiam repudiandae neque possimus fuga odit libero incidunt qui. Labore, unde, modi, nam, quasi cumque repudiandae voluptatibus numquam quas harum sequi vero facere iure dolorum facilis consequuntur nihil maxime accusantium voluptatem! Eos, quam dolores fugit nam quos amet eveniet error debitis nostrum in ipsa dolorem dicta sequi nemo libero alias fugiat beatae consequatur deleniti natus eligendi vel laborum pariatur officia nesciunt ullam dignissimos. </p>
 <ol>
@@ -117,9 +117,9 @@
       <hr>
       <div class="container d-flex">
         <div class="row">
-          <div class="col"><img src="image/tablee.avif" alt="">
-          <img src="image/diningtable.avif" alt="">
-          <img src="" alt="">
+          <div class="col"><img src="tablee.avif" alt="">
+          <img src="diningtable.avif" alt="">
+         
         <p>Tempore, perspiciatis, modi, sed, qui fugiat vel ducimus dignissimos itaque accusantium voluptate consequuntur molestiae placeat similique consequatur numquam illum quisquam exercitationem nostrum et facilis fugit atque a expedita saepe. <br>
 
             Earum tempora voluptatem perspiciatis officia at id eligendi suscipit impedit! Expedita veritatis rerum et neque incidunt quae sit minus possimus enim magni laudantium delectus ex voluptates! Nemo, illum, deleniti, aliquam eos autem amet eius sequi corporis aliquid qui accusantium minima consequuntur voluptatum neque voluptates quae minus rem maxime reprehenderit dolorem numquam illo iure perspiciatis ipsa voluptatem itaque dignissimos. Quaerat, facilis, deleniti, minima similique iusto veritatis excepturi magni ab nisi pariatur tempora ipsum voluptates vitae amet velit est sunt optio ad ex cum aut blanditiis.</p>
