--- a/Catalog.html
+++ b/Catalog.html
@@ -64,7 +64,7 @@
     <div class="row ">
             <h1 id="h1">Computer Desks</h1>
         <div class="col ">
-            <div ><img src="image/desk.jpg" alt="" width="500px" height="300px"></div>
+            <div ><img src="desk.jpg" alt="" width="500px" height="300px"></div>
             <p class="fs-5">We care about our clients and never let them down. From ancient times people always wanted to find a harmony.It is very important to feel the comfort in the dwelling. We spend a great amount of time of our life at our home (house or apartment). We are offering you our tremendous choice of different kinds of furniture. It is totally safe for your health. It has passed many various tests without a single failure.</p>
         </div>
 
@@ -86,15 +86,15 @@
         </div>
                <div class="d1 m-5">
                     <div class="card" style="width: 18rem;">
-                        <img src="image/desk1.jpg" class="card-img-top" alt="...">
+                        <img src="desk1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">White Computer Desk with Drawer and Shelf for Home India <br>₹15,187.00 INR</div>
                      </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="image/desk2.jpg" class="card-img-top" alt="...">
+                        <img src="desk2.jpg" class="card-img-top" alt="...">
                         <div class="card-body">Lukzer Engineered Wood Computer Desk with Modern Style and Space-Saving Design,<br> ₹3,799.00 INR</div>
                       </div>
                       <div class="card" style="width: 18rem;">
-                        <img src="image/desk.jpg" class="card-img-top" alt="...">
+                        <img src="desk.jpg" class="card-img-top" alt="...">
                         <div class="card-body">Lukzer Engineered Wood Computer Desk with Modern Style and Space-Saving Design,<br> ₹3,799.00 INR</div>
                       </div>
                     </div>
@@ -107,7 +107,7 @@
     <div class="row ">
                     <h1 id="h1">Coffee Tables </h1>
         <div class="col ">
-            <div ><img src="image/table.webp" alt="" width="500px" height="300px"></div>
+            <div ><img src="table.webp" alt="" width="500px" height="300px"></div>
             <p class="fs-5">This product has unique design and many special options which could indeed help you. And our product is a perfect combination of cute shapes and real good content. You know, nowadays good design is a really important thing. After that we will offer you exactly what you need. Fashion in this case is really interesting phenomenon - we often like things that are good-looking. And it is normal - after all we get maximum information through the eyes. Don't forget about our 24/7 support system will help you solve your problems anytime. It is really a product of a new generation. We promise that with our good you will always be in fashion and stylish.</p>
         </div>
 
@@ -129,17 +129,17 @@
         </div>
                <div class="d1 m-5">
                     <div class="card" style="width: 18rem;">
-                        <img src="image/Coffee_Table1.jpg" class="card-img-top" alt="..."height="300px">
+                        <img src="Coffee_Table1.jpg" class="card-img-top" alt="..."height="300px">
                         <div class="card-body">Cayman Round Solid Wood Coffee Table in Teak Finish
                             By Urban Ladder <br> ₹16,099 
                             </div>
                      </div>
                     <div class="card" style="width: 18rem;">
-                        <img src="image/Bricole_Coffee.jpg" class="card-img-top" alt="..." height="300px">
+                        <img src="Bricole_Coffee.jpg" class="card-img-top" alt="..." height="300px">
                         <div class="card-body">Claire Rectangular Solid Wood Coffee Table in Mahogany Finish<br> ₹3,799</div>
                       </div>
                       <div class="card" style="width: 18rem;">
-                        <img src="image/coffee_table.jpg" class="card-img-top" alt="..."height="300px">
+                        <img src="coffee_table.jpg" class="card-img-top" alt="..."height="300px">
                         <div class="card-body">Meridian Round Solid Wood Coffee Table in Teak Finish
                             By Urban Ladder <br> ₹5,939 </div>
                       </div>
