--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
   </style>
   <body>
-    <div class="bg" style="background-image: url(image/background.jpg);background-size: cover; background-position: center; height: 100vh; width: 100%; " >
+    <div class="bg" style="background-image: url(background.jpg);background-size: cover; background-position: center; height: 100vh; width: 100%; " >
       <nav class="navbar navbar-expand-lg  sticky-top bg-info">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -79,22 +79,22 @@
            
            <div class="container d-flex m-3">
             <div class="row">
-              <div class="col"><img src="image/chair.avif" alt=""><br>Arne Jacobsen Egg Chair blue <br>
+              <div class="col"><img src="chair.avif" alt=""><br>Arne Jacobsen Egg Chair blue <br>
                 $199.00</div>
-              <div class="col"><img src="image/chairr.avif" alt=""><br>Camilla Armchair <br>$469.00<</div>
-              <div class="col"><img src="image/diningtable.avif" alt=""><br>  Dining Table<br>$199.00</div>
-              <div class="col"><img src="image/chair1.avif" alt=""><br>Avenue six Roundabout spring low circle lounger <br>$78.00
+              <div class="col"><img src="chairr.avif" alt=""><br>Camilla Armchair <br>$469.00<</div>
+              <div class="col"><img src="diningtable.avif" alt=""><br>  Dining Table<br>$199.00</div>
+              <div class="col"><img src="chair1.avif" alt=""><br>Avenue six Roundabout spring low circle lounger <br>$78.00
               </div>
             </div>
             </div>
                        
            <div class="container d-flex m-3">
             <div class="row">
-              <div class="col"><img src="image/bad.jpg" alt=""><br>LEGEND HOME FURNITURE Wooden bad  <br>₹27,366.00 INR </div>
-              <div class="col"><img src="image/furniture1.jpg" alt=""><br>MODERN FURNITURE SHEESHAM Wooden TV Unit for Living Room | Solid Wood TV Cabinet for Bedroom
+              <div class="col"><img src="bad.jpg" alt=""><br>LEGEND HOME FURNITURE Wooden bad  <br>₹27,366.00 INR </div>
+              <div class="col"><img src="furniture1.jpg" alt=""><br>MODERN FURNITURE SHEESHAM Wooden TV Unit for Living Room | Solid Wood TV Cabinet for Bedroom
                 <br> ₹59,689.00 INR</div>
-              <div class="col"><img src="image/rounchir.avif" alt=""><br>Attractive round chair on low revolvi <br>$60.00</div>
-              <div class="col"><img src="image/sofaset1.jpg" alt=""><br>Amaltas Regal Sofa Set Brand: Amaltas</div>
+              <div class="col"><img src="rounchir.avif" alt=""><br>Attractive round chair on low revolvi <br>$60.00</div>
+              <div class="col"><img src="sofaset1.jpg" alt=""><br>Amaltas Regal Sofa Set Brand: Amaltas</div>
             </div>
             </div>
 
